# X-bookmark-worker

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CRON-PROMPT.md  IMPLEMENTATION-PLAN-v2.md  IMPLEMENTATION-PLAN.md  PRD-v2.md  README.md  SKILL.md  config.example.json  pyproject.toml
.github/workflows/: test.yml
bookmark_digest/: __init__.py  __main__.py  analyzer.py  bird.py  bookmark_queue.py  callbacks.py  config.py  delivery.py  fetcher.py  lock.py  migrations.py  processor.py  profile.py  test_analyzer.py  test_callbacks.py  test_cli.py  test_config.py  test_council_v3.py  test_delivery.py  test_digest.py  test_e2e.py  test_fetcher.py  test_lock.py  test_migrations.py  test_profile.py  test_queue.py  test_session3.py  test_session4.py  test_session5.py  test_utils.py
schemas/: bookmark-analysis-v1.json
workflows/: bookmark-pipeline.lobster
