[project]
name = "x-bookmark-worker"
version = "1.1.0"
description = "Process Twitter/X bookmarks into categorized, actionable digests with AI analysis and interactive Telegram buttons. An OpenClaw skill."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["openclaw", "twitter", "bookmarks", "x", "digest", "telegram", "ai-agent", "worker"]
authors = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/openclaw-community/x-bookmark-worker"
Repository = "https://github.com/openclaw-community/x-bookmark-worker"
Issues = "https://github.com/openclaw-community/x-bookmark-worker/issues"

[project.scripts]
bookmark-digest = "bookmark_digest.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bookmark_digest"]

[tool.pytest.ini_options]
testpaths = ["bookmark_digest"]
python_files = ["test_*.py"]
